[package]
name = "lieutenant"
version = "0.2.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
lieutenant-macros = { path =  "macros" }

slab = "0.4"
smallvec = "1.4"
derivative = "2.1"

[dev-dependencies]
criterion = "0.3"
thiserror = "1.0"
anyhow = "1.0"

[[bench]]
name = "dispatcher"
harness = false

[workspace]
members = [".", "macros"]
