[package]
name = "lieutenant"
version = "0.3.0"
authors = ["caelunshun <caelunshun@gmail.com>","miroad <miro.sveits@gmail.com>","Jacob Emil Ulvedal Rosborg <jacob@rosborg.dk>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
indexmap = "1.6"
quickcheck = "1"
regex-syntax = "0.6.18"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"